--- a/r1-app/src/App.css
+++ b/r1-app/src/App.css
@@ -17,7 +17,7 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -35,4 +35,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+.box {
+  display: flex;
+  width: 200px;
+  height: 200px;
+  border: 1px solid black;
+  align-items: center;
+  justify-content: center;
+  margin: 30px;
 }
